Post-theme cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,7 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archive</a></li>
-          <li><a href="/about">About</a></li>
+          <li><a href="/blag">Blag</a></li>
           <li><a href="https://bintray.com/slamon">JFrog Bintray archive</a></li>
           <li><a href="https://travis-ci.org/SLAMon">Travis CI builds</a></li>
           <li><a href="https://github.com/SLAMon">GitHub projects</a></li>
