--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,20 +16,7 @@
 </head>
 
 <body>
-
-
-
-  <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
-    <p>{{ site.description }}</p>
-  </header>
-
-
-
   <div id="page">
-
-
-
     <div id="sidebar">
       <nav>
         <ul>
@@ -38,39 +25,24 @@
           <li><a href="https://bintray.com/slamon">JFrog Bintray archive</a></li>
           <li><a href="https://travis-ci.org/SLAMon">Travis CI builds</a></li>
           <li><a href="https://github.com/SLAMon">GitHub projects</a></li>
+          <li><a href="https://hub.docker.com/u/slamon/">Docker Images</a></li>
           <li><a href="/feed.xml">RSS Feed</a></li>
         </ul>
       </nav>
     </div>
-
-
-
     <div id="content">
       {{ content }}
     </div>
-
-
-
   </div>
-
-
-
   <footer id="footer">
     <p class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a>, theme by <a href="http://www.webmaster-source.com">Matt Harzewski</a></p>
   </footer>
-
-
-
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="/assets/js/jquery.mobilemenu.min.js"></script>
-
   <script>
     $(document).ready(function(){
       $('#sidebar nav ul').mobileMenu({'topOptionText': 'Menu', 'prependTo': '#sidebar nav'});
     });
   </script>
-
-
-
 </body>
 </html>
